[gd_scene load_steps=16 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Level_Scenes/Debug.gd" type="Script" id=2]
[ext_resource path="res://lmao.jpg" type="Texture" id=3]
[ext_resource path="res://Level_Scenes/Bob_Ross_Intro.mp3" type="AudioStream" id=4]
[ext_resource path="res://PixelBoy.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Level_Scenes/Test_Canvas.png" type="Texture" id=6]
[ext_resource path="res://Level_Scenes/Bob_Ross_touhou_boss_theme_V3.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/Bob_Ross_Victory.mp3" type="AudioStream" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 392.5, 8.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 392.5, 9 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 180 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 7.5, 180 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Animation/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1014, 229 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro_Animation/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Intro_Animation/BobRoss_Sound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Start"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("Intro_Animation/Label:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1014, 229 ), Vector2( 390, 229 ), Vector2( 390, 229 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Intro_Animation/Label:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.2, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "start_BGM"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Intro_Animation/BobRoss_Sound:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 5 )

[node name="Debug" type="Node2D"]
script = ExtResource( 2 )

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -19.227

[node name="Lmao" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.282353 )
position = Vector2( 732, 248 )
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = 105.0
margin_top = 164.0
margin_right = 855.0
margin_bottom = 489.0

[node name="Position2D" type="Position2D" parent="ColorRect"]
position = Vector2( 375, 162.5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 105.0
margin_top = 124.0
margin_right = 855.0
margin_bottom = 540.0
texture = ExtResource( 6 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 480, 326.5 )

[node name="Level_Boundaries" type="Node2D" parent="."]

[node name="Boundary_Top" type="KinematicBody2D" parent="Level_Boundaries"]
position = Vector2( 514, -5 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level_Boundaries/Boundary_Top"]
position = Vector2( -36.5, 160.5 )
shape = SubResource( 1 )

[node name="Boundary_Bottom" type="KinematicBody2D" parent="Level_Boundaries"]
position = Vector2( 489, 547 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level_Boundaries/Boundary_Bottom"]
position = Vector2( -11.5, -49 )
shape = SubResource( 2 )

[node name="Boundary_Left" type="KinematicBody2D" parent="Level_Boundaries"]
position = Vector2( -9, 288 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level_Boundaries/Boundary_Left"]
position = Vector2( 104, 39 )
shape = SubResource( 3 )

[node name="Boundary_Right" type="KinematicBody2D" parent="Level_Boundaries"]
position = Vector2( 964, 292 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level_Boundaries/Boundary_Right"]
position = Vector2( -101.5, 35 )
shape = SubResource( 4 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 433.0
margin_top = 24.0
margin_right = 461.0
margin_bottom = 38.0
rect_scale = Vector2( 2, 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "12.0"

[node name="Paintdrop_Container" type="Node2D" parent="."]

[node name="Paint_Spawn_Timer" type="Timer" parent="."]

[node name="Intro_Animation" type="Node2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Intro_Animation"]
root_node = NodePath("../..")
autoplay = "Start"
anims/RESET = SubResource( 5 )
anims/Start = SubResource( 6 )

[node name="BobRoss_Sound" type="AudioStreamPlayer" parent="Intro_Animation"]
stream = ExtResource( 4 )

[node name="Label" type="Label" parent="Intro_Animation"]
margin_left = 1014.0
margin_top = 229.0
margin_right = 1055.0
margin_bottom = 243.0
rect_scale = Vector2( 5, 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Dodge"

[node name="WinScreen" type="Node2D" parent="."]

[node name="WinSound" type="AudioStreamPlayer" parent="WinScreen"]
stream = ExtResource( 8 )
volume_db = -10.0

[connection signal="timeout" from="Paint_Spawn_Timer" to="." method="_on_Paint_Spawn_Timer_timeout"]
[connection signal="animation_finished" from="Intro_Animation/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="finished" from="WinScreen/WinSound" to="." method="_on_WinSound_finished"]
